// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Redux Reports Module Initial reducer state 1`] = `
Object {
  "list": Object {},
  "synced": false,
  "syncing": false,
  "templates": Object {},
}
`;

exports[`Redux Reports Module Simple Actions: snapshot and reducer test createReport 1`] = `
Object {
  "payload": Object {
    "mockReportName": Object {
      "answers": Array [],
      "area": Object {
        "application": "applicationMock",
        "geostore": Object {
          "id": "geostoreIDMock",
        },
        "id": "areaIDMock",
        "name": "nameMock",
      },
      "clickedPosition": "3,4",
      "date": Any<String>,
      "index": 0,
      "reportName": "mockReportName",
      "status": "draft",
      "userPosition": Array [
        1,
        2,
      ],
    },
  },
  "type": "report/CREATE_REPORT",
}
`;

exports[`Redux Reports Module Simple Actions: snapshot and reducer test createReport 2`] = `
Object {
  "list": Object {
    "mockReportName": Object {
      "answers": Array [],
      "area": Object {
        "application": "applicationMock",
        "geostore": Object {
          "id": "geostoreIDMock",
        },
        "id": "areaIDMock",
        "name": "nameMock",
      },
      "clickedPosition": "3,4",
      "date": Any<String>,
      "index": 0,
      "reportName": "mockReportName",
      "status": "draft",
      "userPosition": Array [
        1,
        2,
      ],
    },
  },
  "synced": false,
  "syncing": false,
  "templates": Object {},
}
`;

exports[`Redux Reports Module Simple Actions: snapshot and reducer test getDefaultReport 1`] = `
Object {
  "meta": Object {
    "offline": Object {
      "commit": Object {
        "type": "report/GET_DEFAULT_TEMPLATE_COMMIT",
      },
      "effect": Object {
        "url": "<API_URL_MOCK>/reports/default",
      },
      "rollback": Object {
        "type": "report/GET_DEFAULT_TEMPLATE_ROLLBACK",
      },
    },
  },
  "type": "report/GET_DEFAULT_TEMPLATE_REQUEST",
}
`;

exports[`Redux Reports Module Simple Actions: snapshot and reducer test getDefaultReport 2`] = `
Object {
  "list": Object {},
  "synced": false,
  "syncing": true,
  "templates": Object {},
}
`;
